plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java'
    id 'maven-publish'
}

group = 'me.lulu'
version = '1.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

repositories {
    flatDir { dir("./libs") }
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    compileOnly name: 'Spigot-1_17_R1'
    compileOnly name: 'Spigot-1_8_R3'
    compileOnly name: 'Spigot-1_9_R1'
    compileOnly name: 'Spigot-1_9_R2'
    compileOnly name: 'Spigot-1_10_R1'
    compileOnly name: 'Spigot-1_11_R1'
    compileOnly name: 'Spigot-1_12_R1'
    compileOnly name: 'Spigot-1_13_R1'
    compileOnly name: 'Spigot-1_13_R2'
    compileOnly name: 'Spigot-1_14_R1'
    compileOnly name: 'Spigot-1_15_R1'
    compileOnly name: 'Spigot-1_16_R1'
    compileOnly name: 'Spigot-1_16_R2'
    compileOnly name: 'Spigot-1_16_R3'
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java;
        }
    }
}
tasks.withType(JavaCompile).configureEach {
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}
